--- a/app/src/main/res/layout/stationhostscandialog.xml
+++ b/app/src/main/res/layout/stationhostscandialog.xml
@@ -1,19 +1,154 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    android:padding="5dp"
     android:orientation="vertical"
-    android:padding="5dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/circleddialog"
-        android:visibility="visible">
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:id="@+id/registeredLayout">
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/textView"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="Host Scanner"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/details"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="Details"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="start"/>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:text="IP Address:"
+                android:textColor="@android:color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:ems="10"/>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/regIpAddress"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:ems="10"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:text="Station Name:"
+                android:textColor="@android:color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:ems="10"/>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/regStationName"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:ems="10"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:text="Unit Type:"
+                android:textColor="@android:color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:ems="10"/>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/regUnitType"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:ems="10"/>
+
+        </LinearLayout>
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/btnRemove"
+            android:text="Remove"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:textColor="@android:color/white"
+            android:background="@android:color/holo_red_light"/>
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/btnCancel"
+            android:text="Close"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:textColor="@android:color/black"
+            android:background="@android:color/transparent"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:id="@+id/unregisteredLayout">
 
         <TextView
             android:layout_height="wrap_content"
@@ -21,10 +156,8 @@
             android:id="@+id/textView1"
             android:textStyle="bold"
             android:textSize="25sp"
-            android:textColor="@color/black"
             android:text="Host Scanner"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/robotobold"
             android:layout_gravity="center"/>
 
         <TextView
@@ -33,8 +166,6 @@
             android:textStyle="bold"
             android:textSize="25sp"
             android:text="Details"
-            android:textColor="@color/black"
-            android:fontFamily="@font/robotobold"
             android:layout_marginTop="5dp"
             android:layout_gravity="start"/>
 
@@ -42,129 +173,154 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:visibility="gone"
-            android:id="@+id/hostType1"
+            android:id="@+id/hostType"
             android:textStyle="bold"
             android:textSize="25sp"
-            android:text="Manual"
-            android:textColor="@color/black"
-            android:fontFamily="@font/robotobold"
             android:layout_marginTop="5dp"
             android:layout_gravity="start"/>
 
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:theme="@style/EditTextTheme"
-            app:boxStrokeWidth="10dp"
-            app:errorEnabled="true"
-            >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ipAddress1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/opensansregular"
-                android:hint="IP Address"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="15sp"
-                />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:theme="@style/EditTextTheme"
-            app:boxStrokeWidth="10dp"
-            app:errorEnabled="true"
-            >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/station"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/opensansregular"
-                android:hint="Station Name"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="15sp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:weightSum="2">
 
             <TextView
-                android:layout_marginLeft="3dp"
-                android:id="@+id/serviceTypeView1"
-                android:layout_width="15dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:id="@+id/cardIdView1"
+                android:text="IP Address:"
+                android:textColor="@android:color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:gravity="start"
-                android:text="Unit Type:"
-                android:fontFamily="@font/robotoregular"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@android:color/black" />
+                android:layout_weight="1"
+                android:ems="10"/>
 
-            <Spinner
-                android:id="@+id/unitType1"
-                android:layout_width="wrap_content"
+            <EditText
                 android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/ipAddress"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:gravity="start"
                 android:layout_weight="1"
-                android:tag="Sad"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                android:ems="10"
+                android:hint="IP Address"/>
 
         </LinearLayout>
-
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:orientation="vertical"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:paddingBottom="10dp">
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnSubmit1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:backgroundTint="#02aff3"
-                android:text="Submit"
-                android:layout_gravity="center"
-                android:textColor="@android:color/white"
-                android:layout_marginRight="20dp"/>
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp">
 
-
-            <com.google.android.material.button.MaterialButton
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:id="@+id/btnCancel2"
-                android:layout_width="wrap_content"
+            <TextView
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:strokeColor="#02aff3"
-                android:text="Close"
-                android:layout_gravity="center"
-                android:textColor="@android:color/black" />
+                android:layout_width="match_parent"
+                android:id="@+id/serviceTypeView1"
+                android:text="Unit Type:"
+                android:textColor="@android:color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:gravity="start"
+                android:ems="10"/>
+
+            <Spinner
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/unitType"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:gravity="start"
+                android:ems="10"
+                android:tag="Sad"/>
+
         </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/serviceLevelView1"
+                android:text="Station Name:"
+                android:textColor="@android:color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:gravity="start"
+                android:ems="10"/>
+
+            <EditText
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/stationName"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:gravity="start"
+                android:ems="10"
+                android:hint="Station Name"
+                android:inputType="text"/>
+
+        </LinearLayout>
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/btnSubmit"
+            android:text="Submit"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:textColor="@android:color/white"
+            android:background="@color/colorAccent"/>
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/btnCancel1"
+            android:text="Close"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:textColor="@android:color/black"
+            android:background="@android:color/transparent"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/scan"
+        android:background="@android:color/white">
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="Host Scanner"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"/>
+
+        <pl.droidsonroids.gif.GifImageView
+            android:layout_height="250dp"
+            android:layout_width="match_parent"
+            android:src="@drawable/wave"/>
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Tap Master Key on a SAC"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:gravity="center"
+            android:background="@android:color/white"/>
 
     </LinearLayout>
 
