--- a/app/src/main/res/layout/presetlistlayout.xml
+++ b/app/src/main/res/layout/presetlistlayout.xml
@@ -8,46 +8,32 @@
     android:background="@color/colorPrimary"
     android:id="@+id/presetLayout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/txtUnitName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_gravity="start"
+        android:layout_weight="1"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:layout_marginTop="25dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:weightSum="4"
-        android:orientation="horizontal">
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="#000000"
+        tools:text="1" />
 
-        <TextView
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            tools:text="Unit Name:"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-        <TextView
-            android:id="@+id/txtUnitName"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            tools:text="1"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
         android:weightSum="3"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:background="@color/black"
         android:orientation="horizontal">
 
         <TextView
@@ -57,35 +43,31 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textStyle="bold"
             android:textColor="@color/white"
-            tools:text="Service"/>
+            android:text="Service"/>
 
         <TextView
             android:layout_width="15dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="@color/white"
-            tools:text="Price"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:text="Price"/>
 
         <TextView
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="@color/white"
-            tools:text="Pulse"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:text="Pulse"/>
 
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:background="@color/colorPrimary"
-        android:listSelector="@android:color/darker_gray" />
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
