--- a/app/src/main/res/layout/stationhostscandialog.xml
+++ b/app/src/main/res/layout/stationhostscandialog.xml
@@ -1,39 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:padding="5dp"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/black">
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/textView"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:text="Host Scanner"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/robotobold"
-            android:textColor="@color/white"
-            android:layout_gravity="center"/>
-    </LinearLayout>
-
+    android:orientation="vertical"
+    >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
+        android:background="@drawable/circleddialog"
         android:id="@+id/registeredLayout">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:fontFamily="@font/robotobold"
+            android:text="Host Scanner"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
 
         <TextView
@@ -119,7 +110,6 @@
 
         </LinearLayout>
 
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_height="wrap_content"
@@ -183,7 +173,6 @@
                 android:layout_gravity="center"
                 android:textColor="@android:color/black" />
         </LinearLayout>
-
     </LinearLayout>
 
 
@@ -388,7 +377,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/scan"
-        android:visibility="gone"
+        android:visibility="visible"
         android:background="@android:color/white">
 
         <TextView
