--- a/app/src/main/res/layout/views_preset.xml
+++ b/app/src/main/res/layout/views_preset.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:weightSum="3"
         android:orientation="horizontal">
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
@@ -18,6 +19,7 @@
             app:rippleColor="@color/black"
             android:text="@string/add"
             style="?attr/buttonBarStyle"
+            android:layout_weight="1"
             android:textColor="@color/white"
             android:layout_marginEnd="11dp" />
 
@@ -27,6 +29,7 @@
             android:text="@string/edit"
             app:rippleColor="@color/black"
             style="?attr/buttonBarStyle"
+            android:layout_weight="1"
             android:textColor="@color/white"
             app:backgroundTint="#02aff3"
             android:layout_marginEnd="10dp" />
@@ -37,16 +40,16 @@
             android:layout_height="wrap_content"
             android:text="@string/delete"
             style="?attr/buttonBarStyle"
+            android:layout_weight="1"
             android:textColor="@color/white"
             app:backgroundTint="#FF0000"/>
 
     </LinearLayout>
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:background="@android:color/white"
-        android:listSelector="@android:color/darker_gray" />
+        android:focusableInTouchMode="true"
+        android:focusable="true"/>
 
 </LinearLayout>
