--- a/app/src/main/res/layout/view_reports.xml
+++ b/app/src/main/res/layout/view_reports.xml
@@ -40,6 +40,7 @@
 
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnDownload"
             android:text="@string/download"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
